integrate scan upload and google storage and vision

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,10 +17,12 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: your_project
+  project: "bookworm-211213"
   credentials: <%= Rails.root.join("key.json") %>
-  bucket: your_own_bucket
+  bucket: "bookwormapp_24072018"
 
+
+  
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
 #   service: AzureStorage
